# running

./: .flake8  .gitignore  API_IMPLEMENTATION_SUMMARY.md  DREAMHOST_DEPLOYMENT.md  Download Data.ipynb  Edinburgh Marathon 2024.ipynb  INSTALL.md  NORMALIZATION_GUIDE.md  PACKAGE_SUMMARY.md  Package Demo.ipynb  Parkrun.ipynb  Plot Data.ipynb  QUICKSTART.md  README.md  README_PACKAGE.md  Race Results Normalization.ipynb  Tinto time analysis.ipynb  make_environment.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_package.py
.github/workflows/: deploy.yml  docs.yml  tests.yml  update-db.yml
docs/: .nojekyll  README.md  changelog.rst  cli.rst  conf.py  contributing.rst  database_guide.rst  examples.rst  index.rst  installation.rst  license.rst  normalization_guide.rst  quickstart.rst
docs/api/: data.rst  database.rst  importers.rst  manager.rst  models.rst  plotting.rst  stats.rst  transform.rst
examples/: api_example.py  comparison_example.py  edinburgh_example.py  normalization_example.py  tinto_example.py
race_analyses/: tinto.ipynb
running_results/: __init__.py  cli.py  data.py  database.py  importers.py  manager.py  models.py  plotting.py  ranking.py  reporting.py  stats.py  transform.py
running_results/api/: API_DOCUMENTATION.md  __init__.py  api.fcgi  app.py  auth.py  config.py
scripts/: process_issue.py
tests/: README.md  __init__.py  conftest.py  test_api.py  test_cli.py  test_database.py  test_importers.py  test_manager.py  test_models.py
